fix: toggle clickable area too long

--- a/assets/css/showcase.css
+++ b/assets/css/showcase.css
@@ -3103,9 +3103,6 @@
 .sui-2-12-2 .sui-wrap .sui-toggle {
   display: block;
   opacity: 1;
-  max-width: -webkit-fit-content;
-  max-width: -moz-fit-content;
-  max-width: fit-content;
 }
 .sui-2-12-2 .sui-wrap .sui-toggle input:checked ~ .sui-toggle-slider {
   background-color: #17A8E3;
